--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ Django==1.11.1
 djangorestframework==3.6.3
 gunicorn==19.7.1
 idna==2.5
+pkg-resources==0.0.0
 psycopg2==2.7.1
 PyJWT==1.5.0
 PySocks==1.6.7
 pytz==2017.2
 requests==2.17.3
+simplejson==3.11.1
 six==1.10.0
 twilio==6.3.0
 urllib3==1.21.1
