Cleaned up requirements

--- a/requirements1.txt
+++ b/requirements1.txt
@@ -1,19 +1,19 @@
 certifi==2017.4.17
-chardet==3.0.4
+chardet==3.0.3
 dj-database-url==0.4.2
 Django==1.11.1
 djangorestframework==3.6.3
 gunicorn==19.7.1
 idna==2.5
-plaid-python==2.0.2
+pkg-resources==0.0.0
 psycopg2==2.7.1
-PyJWT==1.5.2
+PyJWT==1.5.0
 PySocks==1.6.7
 pytz==2017.2
-requests==2.18.1
+requests==2.17.3
+simplejson==3.11.1
 six==1.10.0
 twilio==6.3.0
 urllib3==1.21.1
-virtualenv==15.0.1
 whitenoise==3.3.0
 wit==4.2.0
