--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,19 @@ certifi==2017.4.17
 chardet==3.0.4
 dj-database-url==0.4.2
 Django==1.11.1
+django-background-tasks==1.1.10
+django-compat==1.0.14
 djangorestframework==3.6.3
 gunicorn==19.7.1
 idna==2.5
+pkg-resources==0.0.0
 plaid-python==2.0.2
 psycopg2==2.7.1
 PyJWT==1.5.2
 PySocks==1.6.7
 pytz==2017.2
 requests==2.18.1
+simplejson==3.11.1
 six==1.10.0
 twilio==6.3.0
 urllib3==1.21.1
